Added install targets for CMake

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -31,6 +31,17 @@ if(NOT INCLUDE_WEBOTS)
 	set(INCLUDE_WEBOTS "off" CACHE BOOL "Compile Webots Simulator Support?" FORCE)
 endif(NOT INCLUDE_WEBOTS)
 
+if(INCLUDE_WEBOTS)
+	#Out of standard order because link_directories must be set before
+	#the dispatcher is defined as a library
+	set(WEBOTS_INCLUDE "/usr/local/webots/include/controller/c" CACHE STRING
+        "Webots headers include directory" FORCE)
+	set(WEBOTS_LIB "/usr/local/webots/lib" CACHE STRING
+        "Webots libraries directory" FORCE)
+	include_directories(${WEBOTS_INCLUDE})
+	link_directories(${WEBOTS_LIB})
+endif(INCLUDE_WEBOTS)
+
 if(NOT INCLUDE_ROBOTIS)
 	set(INCLUDE_ROBOTIS "off" CACHE BOOL "Compile Robotis Motor Support (mini-Hubo)?" FORCE)
 endif(NOT INCLUDE_ROBOTIS)
@@ -47,6 +58,8 @@ if(INCLUDE_TESTSUITE)
     add_library(conductor-testsuite SHARED testsuite.cpp)
 	target_link_libraries(conductor-testsuite conductor-common)
 	target_link_libraries(conductor-dispatcher conductor-testsuite)
+	install(TARGETS conductor-testsuite
+			LIBRARY DESTINATION lib)
 endif(INCLUDE_TESTSUITE)
 
 if(INCLUDE_HUBO)
@@ -63,28 +76,25 @@ if(INCLUDE_HUBO)
     add_library(conductor-hubo SHARED hubo/hubo.cpp hubo/huboCanDS.cpp)
 	target_link_libraries(conductor-hubo conductor-common)
 	target_link_libraries(conductor-dispatcher conductor-hubo)
+	install(TARGETS conductor-hubo
+			LIBRARY DESTINATION lib)
 endif(INCLUDE_HUBO)
 
 if(INCLUDE_WEBOTS)
 	add_definitions(-DWEBOTS)
-	set(WEBOTS_INCLUDE "/usr/local/webots/include/controller/c" CACHE STRING
-        "Webots headers include directory" FORCE)
-	set(WEBOTS_LIB "/usr/local/webots/lib" CACHE STRING
-        "Webots libraries directory" FORCE)
-	include_directories(${WEBOTS_INCLUDE})
-	link_directories(${WEBOTS_LIB})
-
     add_library(conductor-webots SHARED webots.cpp)
 	target_link_libraries(conductor-webots conductor-common)
 	target_link_libraries(conductor-webots Controller)
 	target_link_libraries(conductor-dispatcher conductor-webots)
+	install(TARGETS conductor-webots
+            LIBRARY DESTINATION lib)
 endif(INCLUDE_WEBOTS)
 
 if(INCLUDE_ROBOTIS)
 	add_definitions(-DROBOTIS)
 	add_subdirectory(flexscanner)
-	#add_subdirectory(${PROJECT_SOURCE_DIR}/flexscanner)
 	target_link_libraries(conductor-dispatcher conductor-robotis)
+	#install targets for ROBOTIS in flexscanner CMakeLists
 endif(INCLUDE_ROBOTIS)
 
 if(INCLUDE_OMNIBOT)
@@ -92,6 +102,8 @@ if(INCLUDE_OMNIBOT)
     add_library(conductor-omnibot SHARED omnibot/omnibot.cpp)
 	target_link_libraries(conductor-omnibot conductor-common)
 	target_link_libraries(conductor-dispatcher conductor-omnibot)
+	install(TARGETS conductor-omnibot
+            LIBRARY DESTINATION lib)
 endif(INCLUDE_OMNIBOT)
 
 link_directories(${OROCOS-RTT_PATH}/lib)
@@ -99,3 +111,8 @@ add_executable(conductor-launcher ../src/launcher.cpp)
 target_link_libraries(conductor-launcher conductor-common)
 target_link_libraries(conductor-launcher conductor-dispatcher)
 target_link_libraries(conductor-launcher orocos-ocl-taskbrowser-gnulinux)
+
+install(TARGETS conductor-common conductor-launcher conductor-dispatcher
+		RUNTIME DESTINATION bin
+        LIBRARY DESTINATION lib)
+
